--- a/base/global/base.html
+++ b/base/global/base.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Base</title>
-</head>
-<body>
-    <h2> {% block texto %} BASE {% endblock texto %}</h2>
+{% include 'global/partials/head.html' %}
+    <h1> {% block texto %} BASE {% endblock texto %}</h1>
+
+    {% include 'global/partials/paragrafo.html' %}
 
 </body>
 </html>
