--- a/base/global/base.html
+++ b/base/global/base.html
@@ -2,7 +2,11 @@
 {% include 'global/partials/head.html' %}
     <h1> {% block texto %} BASE {% endblock texto %}</h1>
 
-    {% include 'global/partials/paragrafo.html' %}
+    <main class="posts">
+        {% include 'global/partials/postblock.html' %}
+    </main>
+{% include 'global/partials/postblock.html' %}
+
 
 </body>
 </html>
