--- a/base/global/base.html
+++ b/base/global/base.html
@@ -1,11 +1,13 @@
 {% include 'global/partials/menu.html' %}
 {% include 'global/partials/head.html' %}
-    <h1> {% block texto %} BASE {% endblock texto %}</h1>
 
-    <main class="posts">
-        {% include 'global/partials/postblock.html' %}
-    </main>
-{% include 'global/partials/postblock.html' %}
+
+<h1> {% block texto %} BASE {% endblock texto %}</h1>
+
+<main class="content">
+    {% block posts %}{% endblock posts %}
+    {% block home %}{% endblock home %}
+</main>
 
 
 </body>
