--- a/base/global/base.html
+++ b/base/global/base.html
@@ -1,8 +1,9 @@
 {% include 'global/partials/menu.html' %}
 {% include 'global/partials/head.html' %}
 
-
-<h1> {% block texto %} BASE {% endblock texto %}</h1>
+{%if text%}
+    <h1> {% block texto %} BASE {% endblock texto %}</h1>
+{% endif %}
 
 <main class="content">
     {% block posts %}{% endblock posts %}
